gcc/testsuite/gdc.test/compilable/imports/pkg313/c313.d
module imports.pkg313.c313;

void bug()
{
}
