gcc/testsuite/gdc.test/fail_compilation/imports/pkg313/package.d
module imports.pkg313;

void bug()
{}
